--- a/index.html
+++ b/index.html
@@ -1,119 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Greenwashing Detection Dashboard</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      padding: 30px;
-    }
-    h1, h2 {
-      color: #38bdf8;
-    }
-    .card {
-      background: #020617;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input {
-      width: 100%;
-      padding: 6px;
-      margin-top: 4px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px;
-      width: 100%;
-      background: #38bdf8;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .risk {
-      font-size: 22px;
-      font-weight: bold;
-      margin-top: 15px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>AI Financial Fraud Detection Dashboard</title>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background:#0f172a;
+  color:#e5e7eb;
+  padding:30px;
+}
+h1,h2 {color:#38bdf8;}
+.card {
+  background:#020617;
+  padding:20px;
+  margin-bottom:20px;
+  border-radius:8px;
+}
+input {
+  width:100%;
+  padding:6px;
+  margin-top:5px;
+}
+button {
+  width:100%;
+  padding:10px;
+  background:#38bdf8;
+  border:none;
+  font-size:16px;
+  margin-top:15px;
+  cursor:pointer;
+}
+.risk {
+  font-size:22px;
+  margin-top:15px;
+  font-weight:bold;
+}
+canvas {
+  background:#020617;
+  margin-top:20px;
+}
+</style>
 </head>
 
 <body>
 
-<h1>AI-Enabled Greenwashing Detection Dashboard</h1>
+<h1>AI-Driven Financial Fraud Detection Dashboard</h1>
 <p>
-This dashboard simulates an AI-driven forensic model that detects abnormal ESG score manipulation by
-cross-verifying sustainability claims with financial statement variables.
+This dashboard simulates an AI-enabled forensic system that analyzes multi-year financial statement indicators
+to detect abnormal patterns and early-stage corporate fraud risk.
 </p>
 
 <div class="card">
-  <h2>Input Financial & ESG Variables</h2>
+<h2>Input Financial Statement Variables</h2>
 
-  <label>ESG Score Improvement (%)</label>
-  <input type="number" id="esg">
+<label>Revenue Growth (%)</label>
+<input type="number" id="rev">
 
-  <label>Emission Reduction (%)</label>
-  <input type="number" id="emission">
+<label>Net Profit Margin (%)</label>
+<input type="number" id="margin">
 
-  <label>ESG Spend (% of Revenue)</label>
-  <input type="number" id="spend">
+<label>Operating Cash Flow Growth (%)</label>
+<input type="number" id="cash">
 
-  <label>Environmental Penalties (₹ Cr)</label>
-  <input type="number" id="penalty">
+<label>Total Accruals (% of Assets)</label>
+<input type="number" id="accrual">
 
-  <label>Energy Cost Trend (% increase)</label>
-  <input type="number" id="energy">
+<label>Debt-to-Equity Ratio</label>
+<input type="number" id="debt">
 
-  <button onclick="calculateRisk()">Analyze Greenwashing Risk</button>
-
-  <div class="risk" id="result"></div>
+<button onclick="analyze()">Analyze Fraud Risk</button>
+<div class="risk" id="result"></div>
 </div>
 
 <div class="card">
-  <h2>AI Forensic Interpretation</h2>
-  <ul>
-    <li>High ESG score growth without proportional emission reduction is flagged.</li>
-    <li>Low ESG spending with strong sustainability claims increases risk.</li>
-    <li>Penalties and rising energy costs contradict green narratives.</li>
-  </ul>
+<h2>Revenue vs Cash Flow Trend (Anomaly Indicator)</h2>
+<canvas id="trendChart"></canvas>
 </div>
 
 <div class="card">
-  <h2>Target Users & Benefits</h2>
-  <ul>
-    <li><b>Investors:</b> Avoid ESG mispricing and hidden risks</li>
-    <li><b>Auditors:</b> Detect ESG misrepresentation</li>
-    <li><b>Banks:</b> Assess ESG-linked credit risk</li>
-    <li><b>Regulators:</b> Identify misleading disclosures</li>
-  </ul>
+<h2>AI Forensic Interpretation</h2>
+<ul>
+<li>High revenue growth unsupported by cash flows is flagged</li>
+<li>Elevated accruals indicate earnings manipulation risk</li>
+<li>High leverage amplifies financial stress and incentives</li>
+</ul>
+</div>
+
+<div class="card">
+<h2>Target Users & Benefits</h2>
+<ul>
+<li><b>Investors:</b> Early detection of earnings manipulation</li>
+<li><b>Auditors:</b> Automated high-risk client screening</li>
+<li><b>Bankers:</b> Credit risk and default probability assessment</li>
+<li><b>Regulators:</b> Proactive fraud surveillance</li>
+</ul>
 </div>
 
 <script>
-function calculateRisk() {
-  let esg = Number(document.getElementById("esg").value);
-  let emission = Number(document.getElementById("emission").value);
-  let spend = Number(document.getElementById("spend").value);
-  let penalty = Number(document.getElementById("penalty").value);
-  let energy = Number(document.getElementById("energy").value);
+function analyze(){
+let rev=Number(document.getElementById("rev").value);
+let margin=Number(document.getElementById("margin").value);
+let cash=Number(document.getElementById("cash").value);
+let accrual=Number(document.getElementById("accrual").value);
+let debt=Number(document.getElementById("debt").value);
 
-  let score = 0;
-  if (esg > emission) score += 2;
-  if (spend < 1) score += 2;
-  if (penalty > 0) score += 2;
-  if (energy > 5) score += 1;
+let score=0;
+if(rev>cash) score+=2;
+if(accrual>5) score+=2;
+if(debt>2) score+=2;
+if(margin>20 && cash<5) score+=2;
 
-  let result = "Low Risk";
-  if (score >= 5) result = "HIGH Greenwashing Risk";
-  else if (score >= 3) result = "MODERATE Greenwashing Risk";
+let risk="Low Risk";
+if(score>=6) risk="HIGH Fraud Risk";
+else if(score>=3) risk="WATCHLIST";
 
-  document.getElementById("result").innerText = result;
+document.getElementById("result").innerText=risk;
+
+new Chart(document.getElementById("trendChart"),{
+type:"line",
+data:{
+labels:["Y1","Y2","Y3","Y4","Y5"],
+datasets:[
+{label:"Revenue Growth",data:[rev-4,rev-2,rev-1,rev,rev+1],borderColor:"#38bdf8"},
+{label:"Cash Flow Growth",data:[cash-3,cash-2,cash-1,cash,cash],borderColor:"#f87171"}
+]
+}
+});
 }
 </script>
 
